examples/ex3/test_cases/failing/check24_variable_redeclare.java
class Main {
    public static void main(String[] a) {
        System.out.println(3);
    }
}

class Simple {

    public int func() {

        int a;
        boolean a;

        return 0;
    }
}